[gd_scene load_steps=5 format=3 uid="uid://dp65htjh51hx8"]

[ext_resource type="AudioStream" uid="uid://cajemqllyvfjp" path="res://Assets/SheepSlingIntro.wav" id="1_nmq45"]
[ext_resource type="Script" path="res://Scripts/va_scene.gd" id="1_qxicu"]

[sub_resource type="LabelSettings" id="LabelSettings_rtw0y"]
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nymkr"]
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="VA Scene" type="Node3D"]
script = ExtResource("1_qxicu")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_nmq45")
volume_db = 3.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -130.0
offset_right = 192.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
text = "Ah, the sheep go out!
"
label_settings = SubResource("LabelSettings_rtw0y")
horizontal_alignment = 1

[node name="TextTimer" type="Timer" parent="Label"]
wait_time = 0.7
one_shot = true

[node name="Label2" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -44.0
offset_right = 244.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
text = "Throw 'em back in, would ya?
"
label_settings = SubResource("LabelSettings_nymkr")
horizontal_alignment = 1

[node name="TextTimer2" type="Timer" parent="Label2"]
wait_time = 2.8
one_shot = true

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Label/TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="timeout" from="Label2/TextTimer2" to="." method="_on_text_timer_2_timeout"]
